--- a/src/style.css
+++ b/src/style.css
@@ -2,10 +2,10 @@ fieldset {
   margin-bottom: 20px;
 }
 
-div {
+.form-field {
   margin-bottom: 10px;
 }
 
-div:last-child {
+.form-field:last-child {
   margin: 0;
 }
